Spacing in skill images fixed

--- a/styles/skills.css
+++ b/styles/skills.css
@@ -54,4 +54,8 @@ p {
         margin-left: 5%;
         margin-right: 5%;
     }
+
+    img {
+        margin-top: 20%;
+    }
 }
